# bop

./: .dockerignore  .env.example  .gitignore  .hookwise.config.mjs  .hookwise.hooks.mjs  AGENTS.md  ARCHITECTURE.md  CACHING_STRATEGY.md  CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FINAL_STATUS.md  DEPLOYMENT_GIT_ACTION_PLAN.md  DEPLOYMENT_SETUP_TAILSCALE.md  DEPLOYMENT_STATUS.md  Dockerfile  FLYIO_PERSISTENCE_STRATEGY.md  HOOKWISE_AGENTIC_TEST.md  PERSISTENT_CACHING_COMPLETE.md  QUICKSTART.md  README.md  RED_TEAM_SECURITY_COMPLETE.md  START_HERE.md  TAILSCALE_ACCESS_GUIDE.md  TAILSCALE_ACCESS_INFO.md  TAILSCALE_ACCESS_READY.md  TAILSCALE_SETUP_COMPLETE.md  TAILSCALE_SETUP_QUICKSTART.md  TAILSCALE_SUCCESS.md  TESTING_AND_SECURITY_GUIDE.md  fly.toml  justfile  openmemory.md  package.json  playwright.config.mjs  pyproject.toml
.cursor/rules/: bop.mdc
.github/: settings.yml
.github/workflows/: automated_analysis.yml  ci.yml  hookwise.yml
.husky/: commit-msg  pre-commit  pre-push  pre-rebase
assets/logos/: logo_concepts.txt  logo_concepts_raw.txt
bop-cli/: Cargo.toml  README.md
bop-cli/src/: main.rs  output.rs  tui.rs
bop-cli/tests/: cli_contract.rs
bop-core/: Cargo.toml  README.md
bop-core/benches/: storage_comparison.rs
bop-core/examples/: distributed_sketch.rs
bop-core/src/: agent.rs  curation.rs  error.rs  lib.rs  llm.rs  mcp.rs  orchestrator.rs  research.rs  retrieval.rs  session.rs  stigmergy.rs  storage.rs
bop-core/src/explain/: mod.rs  token_ot.rs
bop-core/src/ops/: cost.rs
bop-core/tests/: distributed_tests.rs  quality_eval.rs  simulation_tests.rs  state_machine_tests.rs
bop-platform/: Cargo.toml
bop-platform/src/: main.rs
config/prompts/: commit-message.mjs
config/rules/: conventional-commits.mjs  python-quality.mjs
content/: reasoning-theory.md  shape-of-ideas.md
datasets/: __init__.py  calibration_ground_truth.json  edge_cases.json  hf_datasets_loader.py  hf_datasets_subprocess.py  load_external_datasets.py  philosophy_queries.json  science_queries.json  source_credibility_ground_truth.json  ssh_evaluation_dataset.json  technical_queries.json  temporal_queries.json
docker/: Dockerfile.tailscale
docs/: INGESTION_ARCHITECTURE.md  LLM_BACKENDS.md  LLM_CAPABILITIES.md  MCP_CREDENTIALS.md
docs/guides/: ADAPTIVE_QUALITY_ENHANCEMENT.md  CAPABILITIES_EXPLORATION.md  DEPLOYMENT.md  DEVELOPER_QUESTIONS_ANSWERED.md  HIERARCHICAL_SESSIONS.md  KNOWLEDGE_DISPLAY_GUIDE.md  KNOWLEDGE_DISPLAY_IMPLEMENTATION.md  META_CAPABILITIES_REFINED.md  META_LEARNING_IMPLEMENTATION_COMPLETE.md  MIGRATION_GUIDE.md  PROVENANCE_KNOWLEDGE_STRUCTURE_ALIGNMENT.md  QUICK_START_SERVICE.md  RESEARCH_SYNTHESIS.md  SEMANTIC_EVALUATION_GUIDE.md  SESSION_TEMPORAL_TRACKING.md  TEMPORAL_FEATURES.md  TRUST_AND_UNCERTAINTY_USER_GUIDE.md  TRUST_UNCERTAINTY_RESEARCH_SYNTHESIS.md  WEB_API_FEATURES.md  WHATS_NEXT.md
examples/: README.md  cli_output_example.py  demo_complex_queries.py  demo_detailed_traces.py  demo_provenance_features.py  nltk_integration_example.py  notebook_exploration.py  notebook_exploration_rigorous.py  notebook_insights.md  provenance_user_experience.py  real_analysis.py  real_analysis_results.json  real_data_analysis.py  test_experience.py  visualization_examples.py  web_ui_example.md
pran-cli/: Cargo.toml
pran-cli/src/: main.rs
pran-core/: Cargo.toml
pran-core/benches/: storage_comparison.rs
pran-core/src/: agent.rs  curation.rs  orchestrator.rs  research.rs  stigmergy.rs
riff-agent-core/: Cargo.toml  README.md
riff-agent-core/src/: lib.rs
riff-agent-store/: Cargo.toml  README.md
riff-agent-store/src/: lib.rs
riff-llm-client/: Cargo.toml  README.md
riff-llm-client/src/: lib.rs
scripts/: README.md  analyze_repo_with_bop.py  analyze_semantic_results.py  check_contrast.py  deploy_fly.sh  evaluate_ssh_features.py  evaluate_with_datasets.py  generate_actual_logos.py  generate_logo_collage.py  hookwise  make_private.sh  monitor_constraints.py  python_quality_check.mjs  queries_for_analysis.json  redteam_comprehensive.sh  redteam_quick.sh  redteam_test.sh  run_automated_analysis.py  run_multi_dataset_evaluation.py  run_mutation_tests.sh  run_semantic_evaluation.py  run_semantic_evaluation_v2.py  scan_secrets.py  setup_cache_volume.sh  setup_hookwise_env.sh  start_service.sh  tailscale-start.sh  test_deployed.sh  test_hooks.sh  test_local.sh  test_security_comprehensive.sh  test_tailscale.sh  validate_deployment_config.py  validate_integration_complete.py  validate_provenance_e2e.py  validate_secrets.sh  verify_deployment.sh
skills/: agent_design.md  code_quality.md  git_workflow.md  python_best_practices.md  repository_analysis.md  testing_patterns.md
src/bop/: __init__.py  adaptive_quality.py  agent.py  cache.py  calibration_improvement.py  cli.py  constraints.py  context_topology.py  display_helpers.py  error_handling.py  eval.py  exception_handlers.py  information_bottleneck.py  (+31 more)
templates/: chat.html
tests/: TEST_ANNOTATIONS_REPORT.md  __init__.py  accessibility_audit.mjs  analyze_visual_results.mjs  annotate_tests.py  conftest.py  fix_null_score_handling.mjs  quick_visual_test.mjs  real_world_validation.mjs  refactored_accessibility_example.mjs  refactored_visual_test_utils.mjs  run_all_tests.py  run_improvement_cycle.sh  skeptical_audit.mjs  test_adaptive_quality.py  test_adaptive_quality_edge_cases.py  test_adaptive_reasoning_depth.py  test_additional_quality_properties.py  test_advanced_property_invariants.py  test_adversarial_mcp_driven.py  test_agent.py  test_agent_async.py  test_agent_auto_optimization.py  test_agent_compaction.py  test_agent_comprehensive.py  test_agent_edge_cases.py  test_agent_integration.py  test_agent_integration_comprehensive.py  test_agent_observability.py  test_agent_todo_and_reminders.py  test_agent_token_tracking.py  test_annotations.json  test_annotations.py  test_arxiv_research_papers.py  test_backwards_compatibility.py  test_behavioral_properties.py  test_behavioral_property_based.py  test_benchmark_quality_metrics.py  test_cache.py  test_cache_security.py  (+173 more)
(+256 files in other folders)
