[workspace]
resolver = "2"
members = [
    "bop-core",
    "bop-cli",
    "bop-platform",
    "riff-agent-core",
    "riff-agent-store",
    "riff-llm-client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
repository = "https://github.com/arclabs561/bop"
publish = false

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
secrecy = "0.10"
rankops = { path = "../rankops" }
cerno-rerank = { path = "../cerno/cerno-rerank" }
lattix = { path = "../lattix" }
vicinity = { path = "../vicinity" }
hyp = { path = "../hyp" }
subsume-core = { path = "../subsume/subsume-core" }
subsume-ndarray = { path = "../subsume/subsume-ndarray" }
slabs = { path = "../slabs" }
wass = { path = "../wass" }
ndarray = "0.17.2"
ort = "2.0.0-rc.10"
rusqlite = "0.32"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
indicatif = "0.17"
rustyline = "15.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Core (crate names; paths kept stable)
bop-agent-core = { path = "bop-core" }
bop-agent-cli = { path = "bop-cli" }

# Extracted “small core” crates (currently colocated; intended to move out later).
riff-agent-core = { path = "riff-agent-core" }
riff-agent-store = { path = "riff-agent-store" }
riff-llm-client = { path = "riff-llm-client" }

# Platform (A3+; binary name `bop`)
bop-platform = { path = "bop-platform" }

# HTTP client (for LLM APIs)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
sled = "0.34"
redb = "2.4"
hiqlite = { version = "0.12", features = ["full"] }

# Knowledge primitives
hop-core = { path = "../hop/hop-core", default-features = false, features = ["core", "fastembed", "embeddings"] }
anno = { path = "../anno/anno", default-features = false }
axi = { path = "../axi/crates/axi" }

# Constraint solving
varisat = "0.2"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# AWS SDK
aws-config = "1.5"
aws-sdk-s3 = "1.71"
aws-sdk-costexplorer = "1.68"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
proptest = "1.5"
tempfile = "3.10"
criterion = "0.5"
turmoil = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1

[profile.release-optimized]
inherits = "release"
lto = "fat"
panic = "abort"
strip = true
debug = false
