[package]
name = "bop-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "BOP CLI - Research agent command line interface"

[[bin]]
name = "bop"
path = "src/main.rs"

[dependencies]
# Core
bop-core = { workspace = true }

# Async
tokio = { workspace = true }

# CLI
clap = { workspace = true }
clap_complete = { workspace = true }

# TUI (optional)
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Output formatting
serde_json = { workspace = true }

# Directories
dirs = "6.0"

# Environment
dotenvy = "0.15"

# Better REPL
rustyline = { workspace = true }

# Progress
indicatif = { workspace = true }

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]
