[package]
name = "bop-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core agent logic for BOP - research orchestration, LLM, MCP"

[dependencies]
# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP (LLM APIs)
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }

# Storage
sled = { workspace = true }
redb = { workspace = true }
hiqlite = { workspace = true }

# Constraints
varisat = { workspace = true, optional = true }

# IDs and time
uuid = { workspace = true }
chrono = { workspace = true }

# AWS SDK
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-costexplorer = { workspace = true }

# Knowledge primitives
hop-core = { workspace = true }
axi = { workspace = true }

# Scholar Stack integration (optional)
# Note: For serious retrieval, use hop-core at the CLI/app level.
# These are kept minimal - bop-core focuses on agent/LLM logic.
cerno-fuse = { workspace = true, optional = true }

[features]
default = []
constraints = ["dep:varisat"]
# Enable cerno-fuse for result fusion (RRF, weighted, etc.)
fusion = ["dep:cerno-fuse"]

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
criterion = { workspace = true }
turmoil = { workspace = true }

[[bench]]
name = "storage_comparison"
harness = false
