[package]
name = "bop-agent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "A2 agent core for BOP - research orchestration, sessions, tool wiring"
publish = false

[dependencies]
# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Storage
hiqlite = { workspace = true }

# Extracted (small core + persistence)
riff-agent-core = { workspace = true }
riff-agent-store = { workspace = true }
riff-llm-client = { workspace = true }

# Constraints
varisat = { workspace = true, optional = true }

# IDs and time
uuid = { workspace = true }
chrono = { workspace = true }

# AWS SDK
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-costexplorer = { workspace = true }

# Knowledge primitives
hop-core = { workspace = true }
# A0/A1 contracts + adapters.
#
# Note: `axi*` is currently kept private (publish=false). Use explicit path deps so this crate
# never accidentally “publishes” a workspace dependency on a private crate.
axi = { path = "../../axi/crates/axi-kit", package = "axi" }
axi-providers = { path = "../../axi/crates/axi-providers" }

# Optional numeric dependency (only used by explainability helpers).
ndarray = { workspace = true, optional = true }

# Scholar Stack integration (optional)
# Note: For serious retrieval, use hop-core at the CLI/app level.
# These are kept minimal - bop-core focuses on agent/LLM logic.
rankops = { workspace = true, optional = true }

[features]
default = []
constraints = ["dep:varisat"]
# Enable rankops for result fusion (RRF, weighted, etc.)
fusion = ["dep:rankops"]

# Optional explainability: token-level OT alignment artifacts.
#
# This enables hop-core's `token-ot` feature and exposes a small “explain why these match”
# helper that returns a compact artifact (not a full matrix dump).
token-ot-explain = ["dep:ndarray", "hop-core/token-ot"]

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
criterion = { workspace = true }
turmoil = { workspace = true }

[[bench]]
name = "storage_comparison"
harness = false
