[package]
name = "riff-agent-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Persistence for riff-agent types (sessions, knowledge)."
publish = false

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
redb = { workspace = true }
hiqlite = { workspace = true }

riff-agent-core = { workspace = true }

